CI uploads compiled file artifact

--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -19,3 +19,8 @@ jobs:
       run: make
     - name: groundstation
       run: cd groundstation && make
+    - name: upload compiled file artifact
+      uses: actions/upload-artifact@v4
+      with:
+          name: compiled_file
+          path: compiled_file_artifact.out
